# molharbor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  file.html  pyproject.toml  setup.cfg  test.ipynb
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  pre-release.yml  python-package.yml  release.yml  ruff.yml
example_resp/: molport_search.json  molport_search_08.json  molport_search_08_broken.json  molport_search_unavail.json  supplier_search.json  suppliers.json
molharbor/: __init__.py  checker.py  data.py  enums.py  exceptions.py  utils.py
pymolport/: checker.py  data.py  enums.py  exceptions.py
tests/: checker_test.py  data_test.py  mock.py  utils_test.py
tests/data/: bad_smiles_search.json  molport_search.json  search_10_results_exact.json  suppliers_search.json
