[metadata]
name = pymolport
version = 0.0.1.alpha
author = Anton Siomchen
author_email = anton.simchen@gmail.com
description = Python wrapper for MolPort API
license = MIT
keywords = chemistry, HTS, screening, MolPort

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    requests
    numpy
    httpx